[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adtpy"
version = "0.1.0"
authors = [
  { name = "Shiyu Fan", email = "sfan289@aucklanduni.ac.nz" }
]
description = "A Python package for computing similarity metrics between datasets."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "seaborn",
  "scikit-learn",
  "scipy",
  "matplotlib-venn"
]

[project.urls]
Homepage = "https://github.com/Fan-shiyu/adtpy"
